# xiao-nRF52840-sense-data-logger

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.ja.md  README.md
.claude/: settings.local.json
.claude/commands/: commit.md  settings.local.json
.github/: copilot-instructions.md
.github/instructions/: cpp.instructions.md  python.instructions.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_commands.md  oscilloscope_implementation_progress.md  project_overview.md  task_completion_checklist.md  xiao-nrf52840-oscilloscope-implementation.md
docs/: oscilloscope-implementation-plan.md  oscilloscope-visualization-design.md
docs/reducing-cpu-load/: receiver-cpu-optimization.md
receiver/: .pre-commit-config.yaml  CLAUDE.md  README.ja.md  README.md  kill_task.sh  pyproject.toml
receiver/scripts/: analyze_csv_timing.ps1  ble_diagnostics.py
receiver/src/xiao_nrf52840_sense_receiver/: __init__.py  ble_receiver.py  data_recorder.py
receiver/src/xiao_nrf52840_sense_receiver/oscilloscope/: __init__.py  app.py  plots.py
reciever/: .gitignore  README.md  ble_diagnostics.py  debug_ble_data.py  debug_connection_issue.py  pyproject.toml  quick_oscilloscope_test.py  test_ble_oscilloscope.py  test_oscilloscope.py  thread_test.meta.json
reciever/scripts/: ble_diagnostics.py
reciever/src/xiao_nrf52840_sense_reciever/: __init__.py  __main__.py  ble_receiver.py  data_recorder.py
reciever/src/xiao_nrf52840_sense_reciever/oscilloscope/: app.py  plots.py
sender/: .clang-format  CLAUDE.md  README.ja.md  README.md  platformio.ini
(+11 files in other folders)
