[project]
name = "xiao-nrf52840-sense-reciever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yosuke Horie", email = "Yosuke.Horie@sony.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bleak>=1.1.0",
]

[project.scripts]
xiao-nrf52840-sense-reciever = "xiao_nrf52840_sense_reciever:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.uv]
package = true
native-tls = true
